# griptape-nodes-library-flow-production-tracking

./: .env.example  .gitignore  HOW_TO_ITERATE.md  Makefile  README.md  pyproject.toml  test_task_templates.py
example_nodes_template/: __init__.py  age_node.py  create_introduction.py  create_name.py  griptape-nodes-library.json  openai_chat.py  pig_latin.py
flow_production_tracking/: __init__.py  base_shotgrid_node.py  flow_create_asset.py  flow_create_project.py  flow_get_asset_types.py  flow_get_project.py  flow_get_schemas.py  flow_list_assets.py  flow_list_projects.py  flow_shotgrid_config.py  flow_update_asset.py  flow_update_project.py  flow_utils.py  griptape-nodes-library.json  image_utils.py
griptape_cloud/: __init__.py  griptape-nodes-library.json  griptape_cloud_library_advanced.py
griptape_cloud/assets/: __init__.py  base_asset_node.py  create_asset_url.py  upload_asset.py
griptape_cloud/assistants/: __init__.py  assistant_options.py  base_assistant_node.py  get_assistant.py  run_assistant.py
griptape_cloud/base/: base_griptape_cloud_node.py
griptape_cloud/buckets/: base_bucket_node.py  bucket_options.py  get_bucket.py
griptape_cloud/griptape_cloud_client/: __init__.py
griptape_cloud/griptape_cloud_client/api/api_keys/: create_api_key.py  create_organization_api_key.py  delete_api_key.py  get_api_key.py  list_api_keys.py  list_organization_api_keys.py  update_api_key.py
griptape_cloud/griptape_cloud_client/api/assets/: create_asset.py  create_asset_url.py  delete_asset.py  get_asset.py  list_assets.py
griptape_cloud/griptape_cloud_client/api/assistant_runs/: cancel_assistant_run.py  create_assistant_run.py  get_assistant_run.py  list_assistant_runs.py
griptape_cloud/griptape_cloud_client/models/: __init__.py  activity_duration.py  api_key_detail.py  artifact.py  assert_url_operation.py  asset_detail.py  assistant_detail.py  assistant_event_detail.py  assistant_run_detail.py  assistant_run_status.py  bucket_detail.py  cancel_assistant_run_response_content.py  cancel_data_job_response_content.py  cancel_knowledge_base_job_response_content.py  cancel_structure_run_response_content.py  chat_message_driver_configuration.py  chat_message_message.py  chat_message_tool.py  chat_message_tool_activity.py  chat_message_usage.py  client_error_response_content.py  code_source_input_type_0.py  code_source_type_0.py  code_source_type_1.py  confluence_detail.py  confluence_input.py  connection_credentials_input_type_0.py  connection_detail.py  create_api_key_request_content.py  create_api_key_response_content.py  create_asset_request_content.py  create_asset_response_content.py  create_asset_url_request_content.py  create_asset_url_response_content.py  create_assistant_request_content.py  create_assistant_response_content.py  create_assistant_run_request_content.py  create_assistant_run_response_content.py  create_billing_management_url_response_content.py  create_bucket_request_content.py  (+330 more)
griptape_cloud/publish_workflow/: __init__.py  griptape_cloud_published_workflow.py  griptape_cloud_publisher.py  post_build_install_script.sh  pre_build_install_script.sh  register_libraries_script.py  structure.py  structure_config.yaml  structure_workflow_executor.py  workflow_builder.py
griptape_cloud/structures/: __init__.py  base_structure_node.py  get_structure.py  run_structure.py  structure_options.py
scripts/: gen_sdk.py
(+155 files in other folders)
