[project]
name = "griptape_cloud"
version = "0.1.0"
description = "Griptape Nodes library for Griptape Cloud"
authors = [
    {name = "Griptape",email = "team@griptape.ai"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["mdformat>=0.7.22", "pyright>=1.1.396", "ruff>=0.11.0", "typos>=1.30.2", "openapi-python-client>=0.24.3"]
test = ["pytest>=8.3.5"]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="zach/pub-wf-events"}

[tool.ruff]
line-length = 120

[tool.ruff.format]
exclude = [".venv"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["."]
pythonVersion = "3.13"
reportArgumentType = false
reportAttributeAccessIssue = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
