[project]
name = "griptape_cloud"
version = "0.1.0"
description = "Griptape Nodes library for Griptape Cloud"
authors = [
    {name = "Griptape",email = "team@griptape.ai"}
]
readme = "README.md"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "griptape-nodes",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["mdformat>=0.7.22", "pyright>=1.1.396", "ruff>=0.11.0", "typos>=1.30.2", "openapi-python-client>=0.24.3"]
test = ["pytest>=8.3.5"]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="main"}

[tool.ruff]
line-length = 120

[tool.ruff.format]
exclude = [".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TD002",   # Intentional
  "FIX002",  # Intentional
  "D101",    # Intentional
  "D102",    # Intentional
  "D107",    # Intentional
  "ANN002",  # Intentional
  "ANN003",  # Intentional
  "ANN401",  # Intentional
  "COM812",  # Intentional
  "E501",    # TODO: https://github.com/griptape-ai/griptape-nodes/issues/834 
  "D100",    # TODO: https://github.com/griptape-ai/griptape-nodes/issues/835 
  "BLE001",  # TODO: https://github.com/griptape-ai/griptape-nodes/issues/839
  "B026",    # TODO: https://github.com/griptape-ai/griptape-nodes/issues/836 
  "SLF001",  # TODO :https://github.com/griptape-ai/griptape-nodes/issues/838 
  "SIM108",  # Intentional
  "SIM110",  # Intentional
  "D105",    # Intentional
  "N802",    # TODO: https://github.com/griptape-ai/griptape-nodes/issues/840
  "TRY400",  # Intentional
  "FBT003",  # Intentional
  "RET504",  # Intentional
  "PLC0415", # Intentional
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["."]
pythonVersion = "3.13"
reportArgumentType = false
reportAttributeAccessIssue = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
